# ohtu-2021

./: README.md
.github/workflows/: main.yml
viikko1/riippuvuuksien-injektointi-1/src/: laskin.py
viikko1/varasto/: .pylintrc
viikko1/varasto/src/: varasto.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/hello-robot/src/tests/: increase_counter.robot  reset_counter.robot
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/: README.md
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/src/tests/: kauppa_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/: pankki.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/laskin/src/: binaarioperaatio.py  kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: index.py  player.py  score.py  tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/: referaatti.md
viikko7/kivi-paperi-sakset/src/: kps.py  kps_parempi_tekoaly.py  kps_tekoaly.py
