[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "A web application managed by poetry"
authors = ["Ari Kauppi"]

[tool.poetry.dependencies]
python = "^3.8"
jsonpickle = "1.3.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
